[REFACTOR] record 사용 및 hasNext 반환