@@ -1,8 +1,6 @@
 package com.lunchchat.domain.match.converter;
 
 import com.lunchchat.domain.match.dto.MatchResponseDto;
-import com.lunchchat.domain.match.dto.MatchResponseDto.MatchListDto;
-import com.lunchchat.domain.match.dto.MatchResponseDto.MatchListPageDto;
 import com.lunchchat.domain.match.entity.MatchStatus;
 import com.lunchchat.domain.match.entity.Matches;
 import com.lunchchat.domain.member.entity.Member;
@@ -18,41 +16,42 @@ import org.springframework.data.domain.Page;
 public class MatchConverter {
 
   public static MatchResponseDto.MatchListDto toMatchListDto(Matches match, Member opponent) {
-    return MatchResponseDto.MatchListDto.builder()
-        .id(match.getId())
-        .createdAt(match.getCreatedAt())
-        .matchedUser(toMatchedUserDto(opponent))
-        .build();
+    return new MatchResponseDto.MatchListDto(
+        match.getId(),
+        match.getCreatedAt(),
+        toMatchedUserDto(opponent)
+    );
   }
 
+
   public static MatchResponseDto.MatchListPageDto toMatchListPageDto(Page<Matches> matchPage, Long currentUserId) {
-    List<MatchListDto> matchList = matchPage.stream()
+    List<MatchResponseDto.MatchListDto> matchList = matchPage.stream()
         .map(match -> {
           Member opponent = getOpponent(currentUserId, match);
           return toMatchListDto(match, opponent);
         })
-        .collect(Collectors.toList());
+        .toList();
 
-    return MatchListPageDto.builder()
-        .matchList(matchList)
-        .isFirst(matchPage.isFirst())
-        .isLast(matchPage.isLast())
-        .totalPage(matchPage.getTotalPages())
-        .totalElements(matchPage.getTotalElements())
-        .listSize(matchList.size())
-        .build();
+    return new MatchResponseDto.MatchListPageDto(
+        matchList,
+        matchList.size(),
+        matchPage.getTotalPages(),
+        matchPage.getTotalElements(),
+        matchPage.isFirst(),
+        matchPage.hasNext()
+    );
   }
 
   private static MatchResponseDto.MatchedUserDto toMatchedUserDto(Member member) {
-    return MatchResponseDto.MatchedUserDto.builder()
-        .id(member.getId())
-        .memberName(member.getMembername())
-        .studentNo(member.getStudentNo())
-        .department(member.getDepartment().getName())
-        .profileImageUrl(member.getProfileImageUrl())
-        .userKeywords(toKeywordDtoList(member.getUserKeywords()))
-        .userInterests(toInterestDtoList(member.getInterests()))
-        .build();
+    return new MatchResponseDto.MatchedUserDto(
+        member.getId(),
+        member.getMembername(),
+        member.getStudentNo(),
+        member.getDepartment().getName(),
+        member.getProfileImageUrl(),
+        toKeywordDtoList(member.getUserKeywords()),
+        toInterestDtoList(member.getInterests())
+    );
   }
 
   private static Member getOpponent(Long currentUserId, Matches match) {
@@ -63,28 +62,22 @@ public class MatchConverter {
 
   private static List<MatchResponseDto.KeywordDto> toKeywordDtoList(List<UserKeyword> keywords) {
     return keywords.stream()
-        .map(keyword -> MatchResponseDto.KeywordDto.builder()
-            .id(keyword.getId())
-            .keywordName(keyword.getTitle())
-            .build())
+        .map(k -> new MatchResponseDto.KeywordDto(k.getId(), k.getTitle()))
         .collect(Collectors.toList());
   }
 
   private static List<MatchResponseDto.InterestDto> toInterestDtoList(Set<Interest> interests) {
     return interests.stream()
-        .map(interest -> MatchResponseDto.InterestDto.builder()
-            .id(interest.getId())
-            .interestName(interest.getType())
-            .build())
+        .map(i -> new MatchResponseDto.InterestDto(i.getId(), i.getType()))
         .collect(Collectors.toList());
   }
 
   public static MatchResponseDto.MatchResultDto toMatchResultDto(Matches match) {
-    return MatchResponseDto.MatchResultDto.builder()
-        .id(match.getId())
-        .status(match.getStatus())
-        .createdAt(match.getCreatedAt())
-        .build();
+    return new MatchResponseDto.MatchResultDto(
+        match.getId(),
+        match.getStatus(),
+        match.getCreatedAt()
+    );
   }
 
   public static Matches toMatchEntity(Member fromMember, Member toMember) {
